--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,8 +30,10 @@ jobs:
       run: |
         yarn install
         yarn --cwd redisinsight/api/
-    - name: Build
-      run: yarn build:statics:win
+    
+    # - name: Build
+    #   run: yarn build:statics:win
+    
     - name: Package
       run: yarn package:prod
 
